fix quote text contrast for web accessibility
pass 7:1 contrast ratio on https://webaim.org/resources/contrastchecker/

--- a/source/css/_variables.scss
+++ b/source/css/_variables.scss
@@ -69,5 +69,5 @@ $font-mono: "Source Code Pro", Consolas, Monaco, Menlo, monospace;
 //
 $code-bg-color: rgba(0,0,0,0.07);;
 $quote-border-color: #aaa;
-$quote-color: #aaa;
+$quote-color: #595959;
 $code-block-linehight: 1.25 * $root-font-size
